--- a/style.css
+++ b/style.css
@@ -5,63 +5,99 @@
     font-style: bold;
 }
 body{
-    background-color: ; 
+    /*background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;*/
+    background-color: #0D0D0D;
+    color: #F2F2F2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 20px;
-    background-color: #1e2733;
+    margin-left: 10px;
+    margin-right:10px;
 }
-#banner{
-    width: 100%;
-    opacity: 50%;
-    border-radius: 10px;
-    position: relative;
+body img{
+    border-radius: 30px;
+    padding: 20px;
+}
+body section{
+    background-color:#232526 ;
+    border-radius: 30px;
+    padding: 20px;
+    border-top: 10px;
+    margin-bottom: 30px;
 }
 header h1{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% -50%);
+    margin: 0 auto;
     text-align: center;
     font-size: 100px;
     font-family: 'RUST';
+    color: red;
 }
-nav a{
-    margin-left: 10px;
-    display: inline-block;    
-    border: 2px solid ;
-    background-color: ;
-    border-radius: 10px;
-    text-decoration: none;
+button{
+    cursor: pointer;
+}
+#login,#register{
+    /*mover a dereita arriba*/
+    background-color: white;
+    border-radius: 20px;
+    border: none;
+    letter-spacing: 0.2px;
+    font-weight: bold;
     padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+
+}
+nav li{
+    margin-left: 5px;
+    display: inline;    
+    border: 2px solid ;
+    background-color:#A6A6A6 ;
+    border-radius: 10px;
+    list-style-type: none;
+}
+.nav{
+    background-color:#232526  ;
+    border-radius: 10px;
+    padding:10px;
+    text-align: center;
 }
 a{
-    color: #6D733F;
+    padding: 10px;
+    color: #ff4a2a;
+    text-decoration: none;
+    font-size: bold;
 }
 a:hover{
-    color#6D733F
+    color: #ff4a2a;
 }
-section{
-    position: relative;
-
-    background-color: #4F238C;
-    color: #E4F277;
+a:active{
+    color: #ff4a2a;
+}
+/*espacio entre os sections*/
+#tabla_materiales{
+    position:relative;
+    margin-left: 30px;
+    padding:10px;
+    text-align: center;
+    border: 2px solid;
     border-radius: 20px;
-    margin:();
-}    
-#section_rust{
-    position: relative;
-    top: 20px;
+    background-color:#353F40;
 }
-
-
-
-
-
-/*https://www.color-hex.com/color-palette/14903
-#1e2020
-#ce422b
-#f6eae0
-#f6eae0
-#1e2020
-*/
+#tabla_streamers {
+    border: 2px solid ;
+    border-radius: 20px;
+    background-color:#353F40 ;
+}
+#streamers table th,td{
+    border: 2px solid ;
+    border-radius: 20px;
+}
+footer h6{
+    background-color: #232526 ;
+    letter-spacing: 1px;
+    border-radius: 20px;
+    padding: 5px;
+    text-align: center;
+}
 
