--- a/actualizaciones.css
+++ b/actualizaciones.css
@@ -1,29 +1,35 @@
+/*elementos externos*/
 @font-face{
     font-family: 'RUST';
-    src: url(rust/Rust.ttf);
+    src: url(z_Tipografia/rust/Rust.ttf);
     font-weight: bold;
     font-style: bold;
 }
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+/*body etc*/
+
 body{
-    /*background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;*/
     background-color: #A6A6A6 ;
     color: #0D0D0D;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto mono', monospace;
     padding: 20px;
     margin-left: 10px;
     margin-right:10px;
 }
-h1 strong{
-    color: red;
-}
+h1{margin: 0 auto;
+    text-align: center;
+    font-size: 50px;
+    font-family: 'RUST';
+    color: red;}
+
 a{
     padding: 10px;
     color: #ff4a2a;
     text-decoration: none;
     font-size: bold;
     display: inline;
+    font-family: 'Roboto mono', monospace;
 }
 a:hover{
     color: #ff4a2a;
@@ -32,5 +38,7 @@ a:active{
     color: #ff4a2a;
 }
 ul li{
-    background-color: ;
+    background-color:#8f8e8e;
+    list-style:upper-alpha;
+    font-family: 'Roboto mono', monospace;
 }
