--- a/login.css
+++ b/login.css
@@ -1,16 +1,17 @@
+/*recursos externos*/
 @font-face{
     font-family: 'RUST';
     src: url(rust/Rust.ttf);
     font-weight: bold;
     font-style: bold;
 }
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+/*body*/
 body{
-    /*background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;*/
     background-color: #0D0D0D;
     color: #F2F2F2;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'roboto mono', monospace ;
     padding: 20px;
     margin-left: 10px;
     margin-right:10px;
@@ -19,6 +20,9 @@ body{
 h1{
     text-align: center;
 }
+
+/*FORMULARIO*/ 
+
 form{
 	width:500px;
 	padding:20px;
@@ -28,6 +32,7 @@ form fieldset{
     border-radius: 20px;
 }
 input[type=text] {
+    font-family:'roboto mono', monospace;
     width: 50%;
     padding: 12px;
     margin: 8px 0;
@@ -35,7 +40,7 @@ input[type=text] {
   }
 
   input[type=password] {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'roboto mono', monospace;
     width: 50%;
     padding: 12px;
     margin: 8px 0;
@@ -43,6 +48,7 @@ input[type=text] {
   }
   /*button sacado de internet*/
   form button{
+    font-family: 'roboto mono', monospace;
     margin-left: 45%;
     background-color: red;
     border: none;
@@ -58,6 +64,7 @@ input[type=text] {
   }
 
    button{
+    font-family: 'roboto mono', monospace;
     margin-left: 40%;
     background-color: red;
     border: none;
