--- a/registro.css
+++ b/registro.css
@@ -1,21 +1,24 @@
+/*IMPORTACION DE FUENTES EXTERNOS*/
 @font-face{
     font-family: 'RUST';
-    src: url(rust/Rust.ttf);
+    src: url(z_Tipografia/rust/Rust.ttf);
     font-weight: bold;
     font-style: bold;
 }
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+/*DEFINICION BODY*/
 body{
-    /*background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;*/
     background-color: #0D0D0D;
     color: #F2F2F2;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'roboto mono', monospace;
     padding: 20px;
     margin-left: 10px;
     margin-right:10px;
 
 }
+
+/*FORMULARIO*/
 a{
     padding: 10px;
     color: #ff4a2a;
@@ -27,12 +30,13 @@ a:hover{
 }
 a:active{
     color: #ff4a2a;
+    /*ARREGLAR*/
 }
 h1{
     text-align: center;
 }
 form{
-	width:500px;
+  width:500px;
 	padding:20px;
 	border-radius:10px;
 	margin:auto;
@@ -40,38 +44,36 @@ form{
 form fieldset{
     border-radius: 30px;
 }
+
 input[type=text] {
     width: 50%;
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
-  
-  input[type=date] {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+input[type=date] {
+    font-family:'roboto mono', monospace;
     width: 50%;
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }  
-  input[type=mail] {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+input[type=mail] {
+    font-family:'roboto mono', monospace;
     width: 50%;
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
-  
-  input[type=password] {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+input[type=password] {
+    font-family:'robot mono', monospace;
     width: 50%;
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
-
-  /*button sacado de internet*/
-  button{
+button{
+    font-family: 'roboto mono', monospace;
     margin-left: 45%;
     background-color: red;
     border: none;
