--- a/tutoriales.css
+++ b/tutoriales.css
@@ -1,21 +1,25 @@
+/*IMPORTANCIONES DE RECURSOS EXTERNOS*/
 @font-face{
     font-family: 'RUST';
-    src: url(rust/Rust.ttf);
+    src: url(z_Tipografia/rust/Rust.ttf);
     font-weight: bold;
     font-style: bold;
 }
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');/*ESTILOS BODY E TITULO*/
 body{
-    /*background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;*/
+
     background-color: #0D0D0D;
     text-align: center;
     color: #F2F2F2;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'roboto mono', monospace;
     padding: 20px;
     margin-left: 10px;
     margin-right:10px;
 }
 h1{
-    color:red;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 50px;
+    font-family: 'RUST';
+    color: red;
 }
